kubernetes-assignment2/api/api.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app-deploy
  labels:
    name: api-app-deploy
    app: voting-lang-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: api
      app: voting-lang-app
  template:
    metadata:
      name: api
      labels:
        name: api
        app: voting-lang-app
    spec:
      containers:
        - name: backend-api-image
          image: ghcr.io/divya-gariga/be-votelang
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
