kubernetes-assignment2/api/api.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    name: api-service
    app: voting-lang-app
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    name: api
